Landing sale page hmtl layout

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,4 +2,5 @@
 TO-DO
 - Establecer el tamaño de las class=images
 - Poner los recuadros de los recuadros de los items
+- Los sale items se va a clasificar por clase para la fuente y tamaño y por id para la posición
 */
