--- a/assets/style.css
+++ b/assets/style.css
@@ -75,6 +75,75 @@ main{
     background-color: #fff;
 }
 
+.homeContainer{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 16px;
+}
+
+.homeColumn1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 16px;
+    width: 40%;
+}
+
+.homeColumn2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 16px;
+    width: 60%;
+}
+
+.saleItemContainer {
+    flex-grow: 1 1;
+    border-radius: 16px;
+    margin: 20px;
+    position: relative;
+    color: white;
+}
+
+.homeImages {
+    display: block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right:auto;
+    margin-bottom: 10px;
+    background-color: #fff;
+}
+
+.saleText#saleTextBeauty {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 8px;
+    left: 16px;
+  }
+
+.saleText#saleTextClothing {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    text-align: end;
+  }
+
+.saleText#saleTextElectronics {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    text-align: end;
+  }
+
 .container{
     display: flex;
     flex-wrap: wrap;
@@ -85,10 +154,10 @@ main{
 
 .storeItem{
     flex-grow: 1 1;
-    border: 6px solid #962727;
+    border: 4px solid #962727;
     border-radius: 16px;
     padding: 16px;
     margin: 20px;
-    background-color: #b33c54;
+    background-color: #f5b8c4;
 }
 
