--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,11 @@ body{
 
 /*Elementos de la home page*/
 
+#welcomeSign{
+    margin: 16px;
+    position: relative;
+}
+
 .homeContainer {
     display: flex;
     flex-wrap: wrap;
@@ -119,8 +124,12 @@ body{
     background-color: #fff;
 }
 
+.saleText{
+    font-family: "Rammetto One";
+}
+
 .saleText#saleTextMain {
-    width: 100%;
+    width: 30%;
     height: 100%;
     position: absolute;
     top: 8px;
@@ -129,7 +138,7 @@ body{
   }
 
 .saleText#saleTextBeauty {
-    width: 100%;
+    width: 30%;
     height: 100%;
     position: absolute;
     top: 8px;
@@ -137,7 +146,7 @@ body{
   }
 
 .saleText#saleTextClothing {
-    width: 100%;
+    width: 30%;
     height: 100%;
     position: absolute;
     top: 8px;
@@ -146,7 +155,7 @@ body{
   }
 
 .saleText#saleTextElectronics {
-    width: 100%;
+    width: 30%;
     height: 100%;
     position: absolute;
     top: 8px;
