--- a/assets/style.css
+++ b/assets/style.css
@@ -43,10 +43,6 @@ body{
     font-weight: 700;
 }
 
-.navbarText{
-    margin: 8px;
-}
-
 .navbar a {
     position: relative;
     font-size: 1.2rem;
@@ -93,7 +89,7 @@ body{
 
 @media (max-width: 870px){
     .icons{
-        display: block;
+        display: inline-flex;
     }
     
     .navbar{
@@ -101,8 +97,17 @@ body{
         top: 100%;
         left: 0;
         width: 100%;
-        height: 17.7rem;
-        background:#962727;
+        height: auto;
+        background: rgba (0 , 0, 0, .1);
+        backdrop-filter: blur(50px);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    }
+
+    .navbar a{
+        display: block;
+        font-size: 1.2rem;
+        margin: 1.5rem 0;
+        text-align: center;
     }
 }
 
